GL/src/test/deca/syntax/invalid/deca_sans_objet/mauvais_cast.deca
// Description :
//  test mauvais cast
//
// Resultat :
// Erreur syntaxique
// Ligne 8 : caractère inattendu '('
{
    (int 3);
}
